old/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        components: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12.7-management
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: 500Mi
              cpu: 300m
            limits:
              memory: 500Mi
              cpu: 300m
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
